# inigo-rs

./: .gitignore  .spr.yml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  cb.yml  ci.yml
benches/: inigo_benchmark.rs  schema.graphql
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/middleware/: Cargo.toml  README.md  router.yaml  schema.graphql
examples/middleware/cdk/: README.md  cdk.context.json  cdk.go  cdk.json  go.mod  go.sum
examples/middleware/cdk/fargate/: fargate.go  load_balancer.go  service.go  sidecar.go  task.go
examples/middleware/cdk/vpc/: vpc.go
examples/middleware/src/: main.rs
examples/router/: Cargo.toml  README.md  router.yaml  schema.graphql
examples/router/src/: main.rs
examples/starwars/: Cargo.toml  README.md
examples/starwars/model/: Cargo.toml
examples/starwars/model/src/: lib.rs  model.rs
examples/starwars/src/: main.rs
src/: axum.rs  ffi.rs  lib.rs  parser.rs  poem.rs  proxy_service.rs  registry.rs  router_service.rs  tests.rs
starwars/: Cargo.toml
starwars/src/: lib.rs  model.rs
