[package]
name = "inigo-rs"
version = "0.30.5"
edition = "2021"
description = "Inigo plugin"
license = "MIT"
repository = "https://github.com/inigolabs/inigo-rs"
authors = ["Andrii <isoluchok@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-router = { version = "1.49.1" }
async-trait = "0.1"
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
http = "0.2.8"
libloading = "0.7"
lazy_static = "1.4.0"
tracing = "0.1.34"
sys-info = "0.9.1"
anyhow = "1"
sha2 = { version = "0.10.2", features = ["std"] }
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "blocking", "json"] }
jsonpath = "0.1.1"
serde_json_bytes = { version = "0.2.1", features = ["preserve_order"] }
futures = "0.3.30"
hyper = "0.14.28"
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
multimap = "0.9.1"
futures-util = "0.3.30"
axum = { version = "0.6.20" }
url = "2.5.2"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[lib]
bench = false

[[bench]]
name = "inigo_benchmark"
harness = false
