[package]
name = "inigo-rs"
version = "1.2.2"
edition = "2024"
description = "Inigo plugin"
license = "MIT"
repository = "https://github.com/inigolabs/inigo-rs"
authors = ["inigolabs <support@inigo.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apollo-router = { version = "2.2.0" }
async-trait = "0.1"
schemars = { version = "0.8", features = ["url"] }
serde = "1"
serde_json = "1"
tower = { version = "0.5", features = ["full"] }
http = "1"
libloading = "0.7"
lazy_static = "1.4.0"
tracing = "0.1.34"
anyhow = "1"
sha2 = { version = "0.10.2", features = ["std"] }
reqwest = { version = "0.12.0", default-features = false, features = [
    "rustls-tls",
    "blocking",
    "json",
] }
jsonpath = "0.1.1"
serde_json_bytes = { version = "0.2.1", features = ["preserve_order"] }
futures = "0.3.30"
uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
multimap = "0.9.1"
futures-util = "0.3.30"
axum = { version = "0.8.3" }
axum-core = "0.5"
url = "2.5.4"
sysinfo = "0.33.1"
sys-info = "0.9.1"
log = "0.4.25"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "http1", "http2"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
poem = "3.0.0"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[lib]
bench = false

[[bench]]
name = "inigo_benchmark"
harness = false