[package]
name = "inigo-async-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
starwars = { path = "../../starwars" }
inigo-rs = { path = "../.." }
axum = { version = "0.6.20" }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
