# Package was copied from https://github.com/async-graphql/examples/tree/master/models/starwars
[package]
name = "starwars"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
inigo-rs = { path = "../.." }
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-poem = { version = "7" }
starwars = { path = "model" }
poem = "3.0.0"